--- a/app/src/main/res/drawable/ic_button_border.xml
+++ b/app/src/main/res/drawable/ic_button_border.xml
@@ -6,6 +6,6 @@
   <path
       android:strokeWidth="1"
       android:pathData="M10,0.5L337,0.5A9.5,9.5 0,0 1,346.5 10L346.5,46A9.5,9.5 0,0 1,337 55.5L10,55.5A9.5,9.5 0,0 1,0.5 46L0.5,10A9.5,9.5 0,0 1,10 0.5z"
-      android:fillColor="#00000000"
+      android:fillColor="#000000"
       android:strokeColor="#000000"/>
 </vector>
