--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".presentationLayer.logInScreen.LogInActivity">
+    tools:context=".presentation_layer.logInScreen.LogInActivity">
 
     <ImageView
         android:id="@+id/log_in_image"
