fixed some issues

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -40,30 +40,22 @@
 
         <TextView
             android:id="@+id/log_in_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/TitleTextStyle"
             android:layout_marginStart="@dimen/margin32"
             android:layout_marginTop="@dimen/margin48"
             android:layout_marginEnd="@dimen/margin32"
-            android:fontFamily="@font/montserrat_regular"
             android:text="@string/log_in_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/textSize24"
             app:layout_constraintEnd_toEndOf="@id/container"
             app:layout_constraintStart_toStartOf="@id/container"
             app:layout_constraintTop_toTopOf="@id/container" />
 
         <EditText
             android:id="@+id/log_in_edit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/LoginEditTextStyle"
             android:layout_marginStart="@dimen/margin32"
             android:layout_marginTop="@dimen/margin32"
             android:layout_marginEnd="@dimen/margin32"
-            android:background="@drawable/ic_edit_border"
             android:hint="@string/login"
-            android:paddingStart="@dimen/padding24"
-            android:paddingEnd="@dimen/padding24"
             android:text="@={viewModel.editLoginText}"
             app:layout_constraintEnd_toEndOf="@id/container"
             app:layout_constraintStart_toStartOf="@id/container"
@@ -71,32 +63,23 @@
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/LoginEditTextStyle"
             android:layout_marginStart="@dimen/margin32"
             android:layout_marginTop="@dimen/margin24"
             android:layout_marginEnd="@dimen/margin32"
-            android:background="@drawable/ic_edit_border"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:paddingStart="@dimen/padding24"
-            android:paddingEnd="@dimen/padding24"
             android:text="@={viewModel.editPassWordText}"
             app:layout_constraintEnd_toEndOf="@id/container"
             app:layout_constraintStart_toStartOf="@id/container"
             app:layout_constraintTop_toBottomOf="@id/log_in_edit" />
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/LoginButtonStyle"
             android:layout_marginStart="@dimen/margin32"
             android:layout_marginEnd="@dimen/margin32"
-            android:background="@drawable/ic_button_border"
-            android:fontFamily="@font/montserrat_regular"
             android:onClick="@{() -> viewModel.onClickLoginButton()}"
             android:text="@string/login"
-            android:textAllCaps="false"
-            android:textSize="@dimen/textSize18"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
