--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,17 +2,11 @@
 <resources>
 
     <style name="LoginEditTextStyle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="paddingStart">@dimen/padding24</item>
-        <item name="paddingEnd">@dimen/padding24</item>
         <item name="android:background">@drawable/ic_edit_border</item>
     </style>
 
     <style name="TitleTextStyle">
         <item name="fontFamily">@font/montserrat_regular</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/textSize24</item>
     </style>
@@ -22,8 +16,12 @@
         <item name="android:textSize">@dimen/textSize18</item>
         <item name="android:background">@drawable/ic_button_border</item>
         <item name="android:fontFamily">@font/montserrat_regular</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="error_appearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:background">@drawable/ic_edit_border_error</item>
     </style>
 
 </resources>
