--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,34 @@
         <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
+    <style name="CategoriesButtonStyle">
+        <item name="android:background">@drawable/ic_home_page_button_border</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/textSize18</item>
+    </style>
+
+    <style name="HomePageTextView">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="autoSizeTextType">uniform</item>
+    </style>
+
+    <style name="InputLayoutHomePage" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusBottomEnd">@dimen/edit_radius10</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/edit_radius10</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/edit_radius10</item>
+        <item name="boxCornerRadiusTopStart">@dimen/edit_radius10</item>
+        <item name="hintEnabled">false</item>
+    </style>
+
+    <style name="InputEditText">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="color">@color/gray</item>
+        <item name="android:textSize">@dimen/textSize18</item>
+        <item name="android:inputType">text</item>
+        <item name="android:textColorHint">@color/gray</item>
+    </style>
+
 </resources>
