--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
         <item
-            android:id="@+id/home_button"
+            android:id="@+id/homePageFragment"
             android:enabled="true"
             android:icon="@drawable/ic_home_button"
             tools:ignore="MenuTitle" />
         <item
-            android:id="@+id/search_button"
+            android:id="@+id/categoriesPageFragment"
             android:enabled="true"
             android:icon="@drawable/ic_categories_button"
             tools:ignore="MenuTitle" />
         <item
-            android:id="@+id/bag_button"
+            android:id="@+id/cartPageFragment"
             android:enabled="true"
             android:icon="@drawable/ic_shopping_bag_button"
             tools:ignore="MenuTitle" />
         <item
-            android:id="@+id/favourite_button"
+            android:id="@+id/favouritesPageFragment"
             android:enabled="true"
             android:icon="@drawable/ic_favorite_button"
             tools:ignore="MenuTitle" />
         <item
-            android:id="@+id/person_profile_button"
+            android:id="@+id/profilePageFragment"
             android:enabled="true"
             android:icon="@drawable/ic_person_profile_button"
             tools:ignore="MenuTitle" />
