--- a/app/src/main/res/navigation/home_page_navigation.xml
+++ b/app/src/main/res/navigation/home_page_navigation.xml
@@ -6,8 +6,43 @@
     app:startDestination="@id/homePageFragment">
 
     <fragment
-        android:id="@+id/homePageFragment"
-        android:name="com.example.trempelapp.presentation_layer.mainScreen.home_page_fragments.HomePageFragment"
-        android:label="HomePageFragment"
-        tools:layout="@layout/fragment_home_page"/>
+        android:id="@+id/categoriesPageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.CategoriesPageFragment"
+        android:label="CategoriesPageFragment"
+        tools:layout="@layout/fragment_categories_page" />
+    <fragment
+        android:id="@+id/cartPageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.CartPageFragment"
+        android:label="CartPageFragment"
+        tools:layout="@layout/fragment_cart_page"/>
+    <fragment
+        android:id="@+id/favouritesPageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.FavouritesPageFragment"
+        android:label="FavouritesPageFragment"
+        tools:layout="@layout/fragment_favourites_page"/>
+    <fragment
+        android:id="@+id/profilePageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.ProfilePageFragment"
+        android:label="ProfilePageFragment"
+        tools:layout="@layout/fragment_profile_page"/>
+    <navigation android:id="@+id/homePageFragment"
+        app:startDestination="@id/homePage">
+        <fragment
+            android:id="@+id/homePage"
+            android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.HomePageFragment"
+            android:label="HomePageFragment">
+            <action
+                android:id="@+id/action_homePage_to_categoriesPage"
+                app:destination="@id/categoriesPage"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        </fragment>
+        <fragment
+            android:id="@+id/categoriesPage"
+            android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.CategoriesPageFragment"
+            android:label="CategoriesPageFragment"
+            tools:layout="@layout/fragment_categories_page" />
+    </navigation>
 </navigation>
