--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -8,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.category.CategoriesPageViewModel" />
+            type="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.product.ProductListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,18 +15,18 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/category_recycler"
+            android:id="@+id/product_recycler"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin23"
+            android:layout_marginStart="@dimen/margin14"
             android:layout_marginTop="@dimen/margin16"
-            android:layout_marginEnd="@dimen/margin22"
+            android:layout_marginEnd="@dimen/margin13"
             android:adapter="@{viewModel.adapter}"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:spanCount="2"
-            tools:listitem="@layout/trempel_recycler_item" />
+            tools:listitem="@layout/trempel_product_item" />
 
         <ProgressBar
             android:id="@+id/progress"
