--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/homePageFragment"
-            android:enabled="true"
-            android:icon="@drawable/ic_home_button"
-            tools:ignore="MenuTitle" />
-        <item
-            android:id="@+id/categoriesPageFragment"
-            android:enabled="true"
-            android:icon="@drawable/ic_categories_button"
-            tools:ignore="MenuTitle" />
-        <item
-            android:id="@+id/cartPageFragment"
-            android:enabled="true"
-            android:icon="@drawable/ic_shopping_bag_button"
-            tools:ignore="MenuTitle" />
-        <item
-            android:id="@+id/favouritesPageFragment"
-            android:enabled="true"
-            android:icon="@drawable/ic_favorite_button"
-            tools:ignore="MenuTitle" />
-        <item
-            android:id="@+id/profilePageFragment"
-            android:enabled="true"
-            android:icon="@drawable/ic_person_profile_button"
-            tools:ignore="MenuTitle" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <item
+        android:id="@+id/home_page_navigation"
+        android:enabled="true"
+        android:icon="@drawable/ic_home_button"
+        tools:ignore="MenuTitle" />
+    <item
+        android:id="@+id/categories_page_navigation"
+        android:enabled="true"
+        android:icon="@drawable/ic_categories_button"
+        tools:ignore="MenuTitle" />
+    <item
+        android:id="@+id/cart_page_navigation"
+        android:enabled="true"
+        android:icon="@drawable/ic_shopping_bag_button"
+        tools:ignore="MenuTitle" />
+    <item
+        android:id="@+id/favourites_page_navigation"
+        android:enabled="true"
+        android:icon="@drawable/ic_favorite_button"
+        tools:ignore="MenuTitle" />
+    <item
+        android:id="@+id/profile_page_navigation"
+        android:enabled="true"
+        android:icon="@drawable/ic_person_profile_button"
+        tools:ignore="MenuTitle" />
 </menu>
