--- a/app/src/main/res/navigation/categories_page_navigation.xml
+++ b/app/src/main/res/navigation/categories_page_navigation.xml
@@ -2,24 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_page_navigation"
-    app:startDestination="@id/homePageFragment">
+    android:id="@+id/categories_page_navigation"
+    app:startDestination="@id/categoriesPage">
 
     <fragment
-        android:id="@+id/homePageFragment"
-        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.HomePageFragment"
-        android:label="HomePageFragment"
-        tools:layout="@layout/fragment_home_page">
-        <action
-            android:id="@+id/action_homePage_to_categoriesPage"
-            app:destination="@id/categoriesPageFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/categoriesPageFragment"
+        android:id="@+id/categoriesPage"
         android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.category.CategoriesPageFragment"
         android:label="CategoriesPageFragment"
         tools:layout="@layout/fragment_categories_page">
@@ -31,6 +18,5 @@
         android:id="@+id/productListFragment"
         android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.product.ProductListFragment"
         android:label="ProductListFragment"
-        tools:layout="@layout/fragment_product_list" />
-
+        tools:layout="@layout/fragment_product_list"/>
 </navigation>
