--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="margin8">8dp</dimen>
     <dimen name="margin9">9dp</dimen>
     <dimen name="margin13">13dp</dimen>
+    <dimen name="margin14">14dp</dimen>
     <dimen name="margin16">16dp</dimen>
+    <dimen name="margin22">22dp</dimen>
+    <dimen name="margin23">23dp</dimen>
     <dimen name="margin24">24dp</dimen>
+    <dimen name="margin30">30dp</dimen>
+    <dimen name="margin31">31dp</dimen>
     <dimen name="margin32">32dp</dimen>
+    <dimen name="margin40">40dp</dimen>
+    <dimen name="margin41">41dp</dimen>
     <dimen name="margin48">48dp</dimen>
     <dimen name="margin72">72dp</dimen>
+    <dimen name="margin94">94dp</dimen>
+    <dimen name="margin136">136dp</dimen>
 
     <dimen name="padding16">16dp</dimen>
     <dimen name="padding24">24dp</dimen>
@@ -17,7 +27,7 @@
 
     <dimen name="bottom_icon_size">32dp</dimen>
 
-    <dimen name="edit_radius10">10dp</dimen>
+    <dimen name="corner_radius10">10dp</dimen>
 
     <dimen name="categories_button_height">56dp</dimen>
     <dimen name="sale_banner_3_height">151dp</dimen>
