--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,10 +37,10 @@
     </style>
 
     <style name="InputLayoutHomePage" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxCornerRadiusBottomEnd">@dimen/edit_radius10</item>
-        <item name="boxCornerRadiusBottomStart">@dimen/edit_radius10</item>
-        <item name="boxCornerRadiusTopEnd">@dimen/edit_radius10</item>
-        <item name="boxCornerRadiusTopStart">@dimen/edit_radius10</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/corner_radius10</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/corner_radius10</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/corner_radius10</item>
+        <item name="boxCornerRadiusTopStart">@dimen/corner_radius10</item>
         <item name="hintEnabled">false</item>
     </style>
 
@@ -50,6 +50,31 @@
         <item name="android:textSize">@dimen/textSize18</item>
         <item name="android:inputType">text</item>
         <item name="android:textColorHint">@color/gray</item>
+    </style>
+
+    <style name="toolBarStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="titleTextAppearance">@font/montserrat_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="productTitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_light</item>
+    </style>
+
+    <style name="categoryTitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
+
+    <style name="priceTitle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
     </style>
 
 </resources>
