--- a/app/src/main/res/navigation/cart_page_navigation.xml
+++ b/app/src/main/res/navigation/cart_page_navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/cartPageFragment"
-        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.CartPageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.cart.CartPageFragment"
         android:label="CartPageFragment" />
 </navigation>
