--- a/app/src/main/res/navigation/profile_page_navigation.xml
+++ b/app/src/main/res/navigation/profile_page_navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/profilePageFragment"
-        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.ProfilePageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.profile.ProfilePageFragment"
         android:label="ProfilePageFragment" />
 </navigation>
