--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#CD5C5C</color>
     <color name="gray">#C4C4C4</color>
+    <color name="Gold">#FFD700</color>
 </resources>
