--- a/app/src/main/res/layout/trempel_product_item.xml
+++ b/app/src/main/res/layout/trempel_product_item.xml
@@ -68,24 +68,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin8"
-            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginEnd="@dimen/margin12"
             android:layout_marginBottom="@dimen/margin8"
-            android:layout_marginEnd="12dp"
             app:layout_constraintBottom_toBottomOf="@id/price_view"
             app:layout_constraintEnd_toStartOf="@id/cart_image"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/price_view"
             app:layout_constraintTop_toTopOf="@id/price_view"
             app:setPrice="@{product.price}"
-            tools:text="@string/electronics"/>
+            tools:text="@string/electronics" />
 
         <ImageView
             android:id="@+id/cart_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_cart_image"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintBottom_toBottomOf="@id/price_view"
             app:layout_constraintEnd_toEndOf="@id/price_view"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toEndOf="@id/price"
             app:layout_constraintTop_toTopOf="@id/price_view" />
 
