--- a/app/src/main/res/navigation/home_page_navigation.xml
+++ b/app/src/main/res/navigation/home_page_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homePageFragment"
-        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.HomePageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.home.HomePageFragment"
         android:label="HomePageFragment"
         tools:layout="@layout/fragment_home_page">
         <action
@@ -31,6 +31,14 @@
         android:id="@+id/productListFragment"
         android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.product.ProductListFragment"
         android:label="ProductListFragment"
-        tools:layout="@layout/fragment_product_list" />
+        tools:layout="@layout/fragment_product_list" >
+        <action
+            android:id="@+id/action_productListFragment_to_productDetailsPageFragment"
+            app:destination="@id/productDetailsPageFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productDetailsPageFragment"
+        android:name="com.example.trempelapp.presentation_layer.mainScreen.main_fragments.pdp.ProductDetailsPageFragment"
+        android:label="ProductDetailsPageFragment" />
 
 </navigation>
