--- a/app/src/main/res/layout/fragment_product_details_page.xml
+++ b/app/src/main/res/layout/fragment_product_details_page.xml
@@ -69,14 +69,12 @@
 
         <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/rating_bar"
-            style="?android:attr/ratingBarStyleSmall"
+            style="@style/ratingBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin32"
             android:layout_marginTop="@dimen/margin12"
-            android:numStars="5"
             android:rating="@{viewModel.product.rating.rate}"
-            android:stepSize="0.1"
             android:theme="@style/customRatingBar"
             app:layout_constraintStart_toStartOf="@id/product_view"
             app:layout_constraintTop_toBottomOf="@id/title_text" />
