--- a/app/src/main/res/layout/trempel_recently_product_item.xml
+++ b/app/src/main/res/layout/trempel_recently_product_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="recentlyProduct"
-            type="com.example.trempelapp.data_layer.in_memory.data_bases.recently_products_data_base.RecentlyProduct" />
+            type="com.example.trempelapp.data_layer.models.Product" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
