--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -18,18 +18,18 @@
             android:id="@+id/swiper"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin14"
-            android:layout_marginEnd="@dimen/margin13"
+            app:isRefreshing="@{viewModel.isLoadingLiveData}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:onRefresh="@{viewModel::fetchProductsByCategory}"
-            app:isRefreshing="@{viewModel.isLoadingLiveData}">
+            app:onRefresh="@{viewModel::fetchProductsByCategory}">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/product_recycler"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adapter="@{viewModel.adapter}"
+                android:clipToPadding="false"
+                android:padding="@dimen/margin8"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 tools:listitem="@layout/trempel_product_item" />
