--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -10,10 +10,18 @@
             type="com.example.trempelapp.presentation_layer.main_screen.main_fragments.search.SearchPageFragmentViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation_layer.main_screen.main_fragments.search.SearchPageFragment">
+        app:isRefreshing="@{viewModel.isLoadingLiveData}"
+        app:layout_constraintTop_toBottomOf="@id/search_edit"
+        app:onRefreshSearch="@{() -> viewModel.getFilteredListOfProducts(viewModel.queryTextLiveData)}">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".presentation_layer.main_screen.main_fragments.search.SearchPageFragment">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/search_edit"
@@ -39,7 +47,7 @@
                 android:inputType="text"
                 android:text="@={viewModel.queryTextLiveData}" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_result_recycler"
@@ -55,29 +63,18 @@
             app:layout_constraintTop_toBottomOf="@id/search_edit"
             app:spanCount="2" />
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:setVisibility="@{viewModel.isLoadingLiveData}" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            style="@style/empty_list_style"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin136"
-            android:drawableTop="@drawable/ic_empty_search"
-            android:text="@string/no_search_results"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_edit"
-            app:searchResultVisibility="@{viewModel.isSearchEmptyLiveData}" />
+            <androidx.appcompat.widget.AppCompatTextView
+                style="@style/empty_list_style"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/margin136"
+                android:drawableTop="@drawable/ic_empty_search"
+                android:text="@string/no_search_results"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_edit"
+                app:searchResultVisibility="@{viewModel.isSearchEmptyLiveData}" />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/empty_list_style"
@@ -93,5 +90,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_edit" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </layout>
